# NourishAI

./: .env.cloud.example  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  backfill_nutrition.py  docker-compose.yml  generate_synthetic_recipes.py  index.html  ingest_themealdb.py  inspect_db.py  migrate_to_pinecone.py  nourish_backend.py  package-lock.json  package.json  pyproject.toml  repair_db_images.py  test_planner_api.py  test_search_endpoint.py
api/: index.py  requirements.txt
evaluations/: rag_evaluation.ipynb
src/: App.jsx
