[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "litellm>=1.82.0",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "recipe-scrapers>=15.11.0",
    "uvicorn>=0.41.0",
]
