[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "litellm>=1.82.0",
    "google-generativeai>=0.8.0",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "recipe-scrapers>=15.11.0",
    "uvicorn>=0.41.0",
    "supabase>=2.13.0",
    "pinecone>=6.0.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "matplotlib>=3.10.9",
    "tenacity>=9.0.0",
]
